# J-ALERT_Viewer

./: .gitignore  AlertClassifier.cs  AlertState.cs  Cargo.toml  Cloudflared.cs  JAlertReceiver.csproj  JsonlTcpClient.cs  Models.cs  Program.cs  README.md  WebServer.cs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: classify.rs  lib.rs  main.rs  model.rs  source.rs  state.rs  web.rs
src/ui/: admin.rs  areas.rs  assets.rs  display.rs  inbox.rs  mod.rs  sound.rs
wwwroot/: admin.html  inbox.html  index.html  jp-pref.geojson
