[package]
name = "jalert-receiver"
version = "0.2.2"
edition = "2021"
description = "J-ALERT native receiver/display for the SDR# J-Alert plugin"
license = "MIT"

[lib]
name = "jalert_receiver"
path = "src/lib.rs"

[[bin]]
name = "jalert-receiver"
path = "src/main.rs"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui"]

[dependencies]
# Both renderers enabled: try glow (OpenGL); fall back to wgpu (DX12/Vulkan,
# incl. software WARP) for headless VMs / RDP where OpenGL is unavailable.
eframe = { version = "0.29", optional = true, features = ["wgpu"] }
egui = { version = "0.29", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
roxmltree = "0.20"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
